[tool.poetry]
name = "Flask-Rich"
version = "0.4.0"
description = "Rich implementation for Flask"
license = "MIT"
authors = ["BD103 <dont@stalk.me>", "MaxMixAlex <MaxMixAlex@protonmail.com>"]
maintainers = ["MaxMixAlex <MaxMixAlex@protonmail.com>"]
readme = "README.md"
repository = "https://github.com/zyf722/Flask-Rich"
documentation = "https://flask-rich.readthedocs.io"
keywords = ["flask", "extension", "rich"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python"
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3.3"
rich = "^13.5.2"
stransi = "^0.3.0"

[tool.poetry.group.dev.dependencies]
black = "^21.10b0"
isort = "^5.10.1"

[tool.poetry.group.docs.dependencies]
sphinx = "7.1"
sphinx-rtd-theme = "^1.3.0"
myst-parser = "^2.0.0"
sphinx-copybutton = "^0.5.2"

[tool.black]
line-length = 88
# py10 when ready
target-version = ["py39"]
extend-exclude = '''
/(
    | .venv
)/
'''

[tool.isort]
profile = "black"
extend_skip = [".cache"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
